# slam-interpreter

./: .gitignore  deps.sh  run.sh  slam-interpreter.cabal
samples/: area.sample  char.slam  comparisons.sample  conditional.sample  divbyzero.slam  eval.slam  interpolation.sample  interpolation.slam  list.sample  loop.slam  modulo.sample  phrase.sample  recursion.slam  strliterals.sample  testing.sample  testing.slam  variables.sample
src/: Interpreter.hs  LTypes.hs  Main.hs  Parser.hs  Utils.hs  interpreter.hs  ltypes.hs  main.hs  parser.hs  utils.hs
