cabal-version:      2.4
name:               slam-interpreter
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jan Tuomi
maintainer:         jans.tuomi@gmail.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

executable slam-interpreter
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Interpreter,
                      LTypes,
                      Parser,
                      Utils

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base^>=4.14.1.0,
                      text^>=1.2.4.1,
                      mtl^>=2.2.2,
                      containers^>=0.6.5.1,
                      hashable^>=1.4.0.1
    hs-source-dirs:   src
    default-language: Haskell2010
